gestion de la methode create+ vue

--- a/Gestion_Prod_Catalogue/Views/Produit/Index.cshtml
+++ b/Gestion_Prod_Catalogue/Views/Produit/Index.cshtml
@@ -13,7 +13,7 @@
                 <h4 class="text-primary">La liste des Produits</h4>
             </div>
             <div class="col-6 text-right">
-                <a asp-controller="Produit" asp-action="Create" class="btn-success">New Produit</a>
+                <a asp-controller="Produit" asp-action="Create" class="btn-success"><i class="bi bi-plus-circle"></i> &nbsp; New Produit</a>
             </div>
         </div>
     </div>
@@ -39,9 +39,9 @@
                      <td>@obj.Prix</td>
                      <td>@obj.Quantite</td>
                      <td>
-                         <div class="w-75 btn-group" role="group">
-                             <a asp-controller="Produit" asp-action="Edit" asp-route-ProduitID="@obj.ProduitID" class="btn-primary mx-2">Edit</a>
-                             <a asp-controller="Produit" asp-action="Delete" asp-route-ProduitID="@obj.ProduitID" class="btn-danger mx-2">Delete</a>
+                         <div class="w-100 btn-group text-center" role="group">
+                             <a asp-controller="Produit" asp-action="Edit" asp-route-ProduitID="@obj.ProduitID" class="btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                             <a asp-controller="Produit" asp-action="Delete" asp-route-ProduitID="@obj.ProduitID" class="btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
 
                          </div>
                      </td>
