--- a/Gestion_Prod_Catalogue/Views/Shared/_Layout.cshtml
+++ b/Gestion_Prod_Catalogue/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Gestion_Prod_Catalogue</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/BootsWatchTheme.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
 </head>
@@ -36,7 +36,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class=" footer text-muted bg-dark">
         <div class="container">
             &copy; 2021 - Gestion_Prod_Catalogue - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
