--- a/Gestion_Prod_Catalogue/Views/Produit/Create.cshtml
+++ b/Gestion_Prod_Catalogue/Views/Produit/Create.cshtml
@@ -37,8 +37,8 @@
         <span asp-validation-for="CategorieID" class="text-danger"></span>
 
     </div>
-        <button type="submit" class="text-primary mx-2" style="Width:150px">Create</button>
-        <a asp-controller="Produit" asp-action="Index"  class="btn-danger mx-2" style="Width:150px">Back</a>
+        <button type="submit" class="btn btn-primary mx-2" style="Width:150px">Create</button>
+        <a asp-controller="Produit" asp-action="Index"  class="btn btn-secondary mx-2" style="Width:150px">Back</a>
 
     </div>
 </form>
