--- a/Gestion_Prod_Catalogue/Views/Produit/Create.cshtml
+++ b/Gestion_Prod_Catalogue/Views/Produit/Create.cshtml
@@ -4,7 +4,8 @@
 }
 
 
-<form method="post" asp-action="Create">
+
+<form method="post" asp-action="Save">
     <div class="border p-3 mt-4">
         <div class="row m-2">
             <h4 class="text-primary">Ajout d'un produit'</h4>
@@ -31,13 +32,20 @@
             <label>Categorie</label>
             <input asp-for="Categorie" />
         </div>*@
-    <div class="mb-3">
-        <label>CategorieID</label>
-        <input asp-for="CategorieID" class="form-control" />
-        <span asp-validation-for="CategorieID" class="text-danger"></span>
-
+    <div class="form-group mb-3">
+        <label class="control-label p-2">CategorieID</label>
+        @*<input asp-for="CategorieID" class="form-control" />
+        <span asp-validation-for="CategorieID" class="text-danger"></span>*@
+        <select name="CatalogueID" style="Width:150px">
+          @{ 
+              foreach (var c in ViewBag.categorie)
+              {
+                  <option value="@c.CategorieID">@c.CategorieID</option>
+              }
+          }
+        </select>
     </div>
-        <button type="submit" class="btn btn-primary mx-2" style="Width:150px">Create</button>
+        <button type="submit" class="btn btn-primary mx-2" style="Width:150px">Save</button>
         <a asp-controller="Produit" asp-action="Index"  class="btn btn-secondary mx-2" style="Width:150px">Back</a>
 
     </div>
