--- a/Gestion_Prod_Catalogue/Views/Produit/Index.cshtml
+++ b/Gestion_Prod_Catalogue/Views/Produit/Index.cshtml
@@ -5,7 +5,7 @@
 
 @if (TempData["success"] != null)
 {
-    <h4 class="text-success pt-3">@TempData["succes"]</h4>
+    <h4 class="text-success pt-3">@TempData["success"]</h4>
      
 }
 
@@ -31,56 +31,71 @@
                     <th>Designation</th>
                     <th>Prix</th>
                     <th>Quantite</th>
-                    <th>CategorieID</th>
+                    <th>NomCategorie</th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (Produit obj in Model)
                 {
-                <tr class="text-center">
-                    <td>@obj.ProduitID</td>
-                    <td>@obj.Designation</td>
-                    <td>@obj.Prix</td>
-                    <td>@obj.Quantite</td>
-                    <td>@obj.CategorieID</td>
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Produit" asp-action="Edit" asp-route-ProduitID="@obj.ProduitID" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
-                            <a asp-controller="Produit" asp-action="Delete" asp-route-ProduitID="@obj.ProduitID" class="btn btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
-                        </div>
-                    </td>
+                    <tr class="text-center">
+                        <td>@obj.ProduitID</td>
+                        <td>@obj.Designation</td>
+                        <td>@obj.Prix</td>
+                        <td>@obj.Quantite</td>
+                        <td>@obj.Categorie.NomCategorie</td>
+                        <td>
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Produit" asp-action="Edit" asp-route-ProduitID="@obj.ProduitID" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                                <a asp-controller="Produit" asp-action="Delete" asp-route-ProduitID="@obj.ProduitID" class="btn btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
+                            </div>
+                        </td>
 
 
-                </tr>
+                    </tr>
                 }
             </tbody>
 
         </table>
+
+
     }
     else
     {
         <h4 class="text-danger">le Produit est introuvable !</h4>
     }
 
-     @*creation de lien pour naviguer entre les pages*@
+@*<cs-pager cs-paging-pagenumber="4"
+          cs-paging-totalitems="4"
+          cs-paging-pagesize="4"
+          cs-pagenumber-param="pagenumber"
+          asp-controller="Produit"
+          asp-action="Index"
+    cs-pager-li-current-class="page-item active"
+    cs-pager-li-other-class="page-item"
+    cs-pager-li-non-active-class="page-item disabled"
+    cs-pager-link-current-class="page-link"
+    cs-pager-link-other-class="page-link">
+</cs-pager>*@
+    @*creation de lien pour naviguer entre les pages*@
     <div>
-        <ul class="nav nav-pills">
-            @{
-                for (int i = 0; i < ViewBag.totalPages; i++)
-                {
-                    string className = "";
-                    if (i == ViewBag.CurrentPage)
+            <ul class="nav nav-pills">
+                @{
+                    for (int i = 0; i < ViewBag.totalPages; i++)
                     {
-                        className = "active";
+                        string className = "";
+                        if (i == ViewBag.CurrentPage)
+                        {
+                            className = "active";
+                        }
+                        <li class="@className m-2">
+                            <a asp-action="Index" asp-route-page="@i">@i</a>
+                        </li>
                     }
-                    <li class="@className m-2">
-                        <a asp-action="Index" asp-route-page="@i">@i</a>
-                    </li>
                 }
-            }
-        </ul>
-    </div>
+            </ul>
+        </div>
+
 
 </div>
 
