--- a/Gestion_Prod_Catalogue/Views/_ViewImports.cshtml
+++ b/Gestion_Prod_Catalogue/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Gestion_Prod_Catalogue
 @using Gestion_Prod_Catalogue.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, cloudscribe.Web.Pagination
