--- a/Gestion_Prod_Catalogue/Views/Produit/Index.cshtml
+++ b/Gestion_Prod_Catalogue/Views/Produit/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Produit>
+﻿@model IEnumerable<Gestion_Prod_Catalogue.Models.Produit>
 @{
     ViewData["Title"] = "Index";
 }
@@ -20,6 +20,17 @@
 
             </div>
         </div>
+    </div>
+     
+    <div class="container mt-2 mb-2">
+        <form method="get" asp-action="Index" class="mb-2">
+           
+                <label class="m-2" >Mot Clé: </label>
+                <input type="text" name="motcle" />
+            <button type="submit" class="btn btn-primary" >Chercher</button>
+           
+        </form>
+
     </div>
 
     @if (Model.Count() > 0)
@@ -46,7 +57,7 @@
                         <td>@obj.Categorie.NomCategorie</td>
                         <td>
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Produit" asp-action="Edit" asp-route-ProduitID="@obj.ProduitID" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                                <a asp-controller="Produit" asp-action="Edit" asp-route-id="@obj.ProduitID" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
                                 <a asp-controller="Produit" asp-action="Delete" asp-route-ProduitID="@obj.ProduitID" class="btn btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
                             </div>
                         </td>
